# poker

./: Cargo.toml  README.md
src/: card.rs  lib.rs  suit.rs  value.rs
src/cards/: card.rs  deck.rs  mod.rs  number.rs  shoe.rs  suit.rs  value.rs
src/cards/traits/: deck.rs  hash.rs  mod.rs  order.rs  shoe.rs  value.rs
src/games/baccarat/: card.rs  game.rs  hand.rs  mod.rs  number.rs  rule.rs  shoe.rs
ui/common/: card.slint  card_picker.slint  const.slint  lang.slint
