[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "=1.4.0"
rand = "0.8.5"

[lib]
name = "poker"
path = "src/lib.rs"

[[bin]]
name = "baccarat-perf"
path = "src/bin/baccarat/perf.rs"
